Fix post header styling on mobile

--- a/src/components/ui/PostHeader.scss
+++ b/src/components/ui/PostHeader.scss
@@ -28,14 +28,18 @@
 
 @media (max-width: $tablet-breakpoint) {
   .post-header {
+    h1,
+    .author,
+    .date {
+      grid-column: 1/3;
+    }
+
     h1 {
       grid-row: 2/3;
     }
-
     .author {
       grid-row: 3/4;
     }
-
     .date {
       grid-row: 1/2;
     }
